<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiveMonitor</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="gitHubLink">https://github.com/J-8/HiveMonitor</string>
    
    <string name="title_section1">Overview</string>
    <string name="title_section2">Temperature</string>
    <string name="title_section3">Weight</string>
    <string name="settingsL">Settings</string>
    <string name="tempLabel">Temperature</string>
    <string name="weightLabel">Weight</string>
    <string name="connecterrorLabel">Connection could not be established.</string>
    <string name="action_settings">Settings</string>
    <string name="lastupdatelabel">Last updated: </string>
    <string name="dummy">never</string>
    <string name="contentDescription">Logo</string>
    <string name="refresh">Refresh</string>
    <string name="certManageBTN">Manage certificates</string>
    <string name="certDialog">Tap to delete</string>
    <string name="DialogRegister">Registering&#8230;</string>
    <string name="DialogUnregister">Unregistering&#8230;</string>
    <string name="DialogServerCheck">Checking server&#8230;</string>
    <string name="DialogLoading">Loading data&#8230;</string>
    <string name="ConnectError">Connection failed</string>
    <string name="ConnectSuccess">Connection successful</string>
    <string name="nameEnter">Please enter name.</string>
    <string name="serverEnter">Please enter server.</string>
    <string name="registerSuccess">Registration successful</string>
    <string name="registerFailed">Registration failed</string>
    <string name="unregisterSuccess">Unregistration successful</string>
    <string name="unregisterFailed">Unregistration failed</string>
    <string name="serverError">Servererror</string>
    <string name="nameError">Please enter name.\nOnly letters allowed!</string>
    <string name="title_activity_fragment_overview">Overview</string>
    <string name="title_activity_fragment_connect_error">Connection Error</string>
    <string name="title_activity_welcome">Server Setup</string>
    <string name="serverCheckL">Configure server:</string>
    <string name="serverHint">Server</string>
    <string name="serverCheckBTN">Check server</string>
    <string name="serverManageBTN">Configure server</string>
    <string name="startBTN">Save and Start</string>
    <string name="settingsNameL">Name</string>
    <string name="settingsVibrationL">Vibration</string>
    <string name="settingsVibrationSummaryL">Vibrate on notification</string>
    <string name="settingsNotificationsL">Notifications</string>
    <string name="settingsNotificationsBTN">Receive notifications</string>
    <string name="settingsFurtherL">Other</string>
    <string name="gitHubL">This project on GitHub</string>

</resources>
